--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             <h2>Dashboard</h2>
           </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-5 top-card-wrapper">
           <h3>Company Status</h3>
           <div class="col-xl-3 col-md-4 col-sm-6 mt-4">
-            <div class="card" style="width: 15rem;">
+            <div class="card">
               <div class="card-header">
                 <div class="d-flex flex-row align-items-center">
                   <div class="icon"> <img src="images/card-icon.png" alt=""> </div>
@@ -156,10 +156,10 @@
               </div>
               <div class="card-body">
                 <div class="row mb-5">
-                  <div class="col-md-5">
+                  <div class="col-md-5 col-6">
                     <h4>450</h4>
                   </div>
-                  <div class="col-md-7">
+                  <div class="col-md-7 col-6">
                     <a href="#" class="btn btn-primary view-btn">View All</a>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-4 col-sm-6 mt-4">
-            <div class="card" style="width: 15rem;">
+            <div class="card">
               <div class="card-header">
                 <div class="d-flex flex-row align-items-center">
                   <div class="icon"> <img src="images/card-icon.png" alt=""> </div>
@@ -203,10 +203,10 @@
               </div>
               <div class="card-body">
                 <div class="row mb-5">
-                  <div class="col-md-5">
+                  <div class="col-md-5 col-6">
                     <h4>420</h4>
                   </div>
-                  <div class="col-md-7">
+                  <div class="col-md-7 col-6">
                     <a href="#" class="btn btn-primary view-btn">View All</a>
                   </div>
                 </div>
@@ -239,7 +239,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-4 col-sm-6 mt-4">
-            <div class="card" style="width: 15rem;">
+            <div class="card">
               <div class="card-header">
                 <div class="d-flex flex-row align-items-center">
                   <div class="icon"> <img src="images/card-icon.png" alt=""> </div>
@@ -250,10 +250,10 @@
               </div>
               <div class="card-body">
                 <div class="row mb-5">
-                  <div class="col-md-5">
+                  <div class="col-md-5 col-6">
                     <h4>15</h4>
                   </div>
-                  <div class="col-md-7">
+                  <div class="col-md-7 col-6">
                     <a href="#" class="btn btn-primary view-btn">View All</a>
                   </div>
                 </div>
@@ -286,7 +286,7 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-4 col-sm-6 mt-4">
-            <div class="card" style="width: 15rem;">
+            <div class="card">
               <div class="card-header">
                 <div class="d-flex flex-row align-items-center">
                   <div class="icon"> <img src="images/card-icon.png" alt=""> </div>
@@ -297,10 +297,10 @@
               </div>
               <div class="card-body">
                 <div class="row mb-5">
-                  <div class="col-md-5">
+                  <div class="col-md-5 col-6">
                     <h4>5</h4>
                   </div>
-                  <div class="col-md-7">
+                  <div class="col-md-7 col-6">
                     <a href="#" class="btn btn-primary view-btn">View All</a>
                   </div>
                 </div>
