--- a/attendance.html
+++ b/attendance.html
@@ -145,7 +145,7 @@
           </div>
           <div class="col-lg-6 d-flex justify-content-lg-end align-items-center">
             <button class="btn btn-primary download-btn me-4">Download Report</button>
-            <img src="images/settings.png" alt="" width="30" height="30">
+            <img src="images/settings.png" alt="" width="30" height="30" style="cursor: pointer;">
           </div>
         </div>
         <div class="row mt-5">
